Import of LICHTKIND/Kephra-0.3.9_5 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9_5
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9_5.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/global/autosaved.conf
+++ b/share/config/global/autosaved.conf
@@ -252,17 +252,23 @@
 <file>
     <endings>
         forth = forth
+        err = errorlist
         vbs = vbs dsm
+        baan = bc cln
         php = php php3 php4 phtml
         xml = xml xsl svg xul xsd dtd xslt axl xrc rdf
-        sh = bsh sh
         haskell = hs
-        tex = tex sty
+        sh = bsh sh
         idl = idl odl
+        tex = tex sty
+        property = properties session ini inf reg url cfg cnf aut
         vb = vb bas frm cls ctl pag dsr dob
         sql = sql
+        matlab = m octave
         scheme = scm smd ss
+        ave = ave
         js = js
+        diff = diff patch
         tcl = tcl tk itk
         cs = cs
         ps = ps
@@ -273,15 +279,17 @@
         pascal = pas dpr dpk dfm inc pp
         html = htm html ssi shtml xhtml tag stag
         ada = ada ads adb
-        text = txt ini nfo cfg
+        text = txt nfo
         context = tuo sty
         python = py pyw
+        make = makefile Makefile mak configure
         java = jav java
         ruby = rb
         conf = conf
         nsis = nsi nsh
         asm = s asm
         perl = pl ple plx plex pm pod cgi
+        batch = bat cmd nt
         yaml = yaml yml
         as = as
         eiffel = e
@@ -289,17 +297,17 @@
         lua = lua
     </endings>
     <history>
+        path = share\config\syntaxhighlighter\ave.pm
+        path = share\help\deutsch\diese_version.txt
         path = D:\src\perl\editor\dev\base\share\config\interface\icon\splash\start_kephra.xpm
         path = D:\src\perl\editor\dev\base\bin\kephra
         path = C:\DOCUME~1\adam\LOCALS~1\Temp\PPM-1208628613
         path = share\help\deutsch\besondere_funktionen.txt
-        path = share\help\deutsch\diese_version.txt
         path = D:\src\perl\editor\dev\base\share\help\english\welcome.txt
         path = D:\src\perl\editor\dev\base\share\help\english\navigation.txt
         path = share\help\deutsch\navigation.txt
         path = share\help\deutsch\willkommen.txt
         path = share\help\deutsch\alle_funktionen.txt
-        path = share\help\deutsch\lizenz\anerkennung.txt
         length = 11
     </history>
     <defaultsettings>
