--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -219,12 +219,17 @@
 				ada = Kephra::Document::SyntaxMode::change_to('ada')
 				as = Kephra::Document::SyntaxMode::change_to('as')
 				asm = Kephra::Document::SyntaxMode::change_to('asm')
+				ave = Kephra::Document::SyntaxMode::change_to('ave')
+				baan = Kephra::Document::SyntaxMode::change_to('baan')
+				batch = Kephra::Document::SyntaxMode::change_to('batch')
 				c = Kephra::Document::SyntaxMode::change_to('cpp')
 				conf = Kephra::Document::SyntaxMode::change_to('conf')
 				context = Kephra::Document::SyntaxMode::change_to('context')
 				cs = Kephra::Document::SyntaxMode::change_to('cs')
 				css = Kephra::Document::SyntaxMode::change_to('css')
+				diff = Kephra::Document::SyntaxMode::change_to('diff')
 				eiffel = Kephra::Document::SyntaxMode::change_to('eiffel')
+				err = Kephra::Document::SyntaxMode::change_to('err')
 				forth = Kephra::Document::SyntaxMode::change_to('forth')
 				fortran = Kephra::Document::SyntaxMode::change_to('fortran')
 				html = Kephra::Document::SyntaxMode::change_to('html')
@@ -234,10 +239,13 @@
 				latex = Kephra::Document::SyntaxMode::change_to('latex')
 				lisp = Kephra::Document::SyntaxMode::change_to('lisp')
 				lua = Kephra::Document::SyntaxMode::change_to('lua')
+				make = Kephra::Document::SyntaxMode::change_to('make')
+				matlab = Kephra::Document::SyntaxMode::change_to('matlab')
 				nsis = Kephra::Document::SyntaxMode::change_to('nsis')
 				pascal = Kephra::Document::SyntaxMode::change_to('pascal')
 				perl = Kephra::Document::SyntaxMode::change_to('perl')
 				php = Kephra::Document::SyntaxMode::change_to('php')
+				property = Kephra::Document::SyntaxMode::change_to('property')
 				ps = Kephra::Document::SyntaxMode::change_to('ps')
 				python = Kephra::Document::SyntaxMode::change_to('python')
 				ruby = Kephra::Document::SyntaxMode::change_to('ruby')
@@ -368,12 +376,17 @@
 					ada = Kephra::Show::syntaxmode_file('ada')
 					as = Kephra::Show::syntaxmode_file('as')
 					asm = Kephra::Show::syntaxmode_file('asm')
+					ave = Kephra::Show::syntaxmode_file('ave')
+					baan = Kephra::Show::syntaxmode_file('baan')
+					batch = Kephra::Show::syntaxmode_file('batch')
 					c = Kephra::Show::syntaxmode_file('cpp')
 					conf = Kephra::Show::syntaxmode_file('conf')
 					context = Kephra::Show::syntaxmode_file('context')
 					cs = Kephra::Show::syntaxmode_file('cs')
 					css = Kephra::Show::syntaxmode_file('css')
+					diff = Kephra::Show::syntaxmode_file('diff')
 					eiffel = Kephra::Show::syntaxmode_file('eiffel')
+					err = Kephra::Show::syntaxmode_file('err')
 					forth = Kephra::Show::syntaxmode_file('forth')
 					fortran = Kephra::Show::syntaxmode_file('fortran')
 					html = Kephra::Show::syntaxmode_file('html')
@@ -383,10 +396,13 @@
 					latex = Kephra::Show::syntaxmode_file('latex')
 					lisp = Kephra::Show::syntaxmode_file('lisp')
 					lua = Kephra::Show::syntaxmode_file('lua')
+					make = Kephra::Show::syntaxmode_file('make')
+					matlab = Kephra::Show::syntaxmode_file('matlab')
 					nsis = Kephra::Show::syntaxmode_file('nsis')
 					pascal = Kephra::Show::syntaxmode_file('pascal')
 					perl = Kephra::Show::syntaxmode_file('perl')
 					php = Kephra::Show::syntaxmode_file('php')
+					property = Kephra::Show::syntaxmode_file('property')
 					ps = Kephra::Show::syntaxmode_file('ps')
 					python = Kephra::Show::syntaxmode_file('python')
 					ruby = Kephra::Show::syntaxmode_file('ruby')
@@ -529,12 +545,17 @@
 				ada = Kephra::Document::SyntaxMode::get() eq 'ada'
 				as = Kephra::Document::SyntaxMode::get() eq 'as'
 				asm = Kephra::Document::SyntaxMode::get() eq 'asm'
+				ave = Kephra::Document::SyntaxMode::get() eq 'ave'
+				baan = Kephra::Document::SyntaxMode::get() eq 'baan'
+				batch = Kephra::Document::SyntaxMode::get() eq 'batch'
 				c = Kephra::Document::SyntaxMode::get() eq 'cpp'
 				conf = Kephra::Document::SyntaxMode::get() eq 'conf'
 				context = Kephra::Document::SyntaxMode::get() eq 'context'
 				cs = Kephra::Document::SyntaxMode::get() eq 'cs'
 				css = Kephra::Document::SyntaxMode::get() eq 'css'
+				diff = Kephra::Document::SyntaxMode::get() eq 'diff'
 				eiffel = Kephra::Document::SyntaxMode::get() eq 'eiffel'
+				err = Kephra::Document::SyntaxMode::get() eq 'err'
 				forth = Kephra::Document::SyntaxMode::get() eq 'forth'
 				fortran = Kephra::Document::SyntaxMode::get() eq 'fortran'
 				html = Kephra::Document::SyntaxMode::get() eq 'html'
@@ -544,10 +565,13 @@
 				latex = Kephra::Document::SyntaxMode::get() eq 'latex'
 				lisp = Kephra::Document::SyntaxMode::get() eq 'lisp'
 				lua = Kephra::Document::SyntaxMode::get() eq 'lua'
+				make = Kephra::Document::SyntaxMode::get() eq 'make'
+				matlab = Kephra::Document::SyntaxMode::get() eq 'matlab'
 				nsis = Kephra::Document::SyntaxMode::get() eq 'nsis'
 				pascal = Kephra::Document::SyntaxMode::get() eq 'pascal'
 				perl = Kephra::Document::SyntaxMode::get() eq 'perl'
 				php = Kephra::Document::SyntaxMode::get() eq 'php'
+				property = Kephra::Document::SyntaxMode::get() eq 'property'
 				ps = Kephra::Document::SyntaxMode::get() eq 'ps'
 				python = Kephra::Document::SyntaxMode::get() eq 'python'
 				ruby = Kephra::Document::SyntaxMode::get() eq 'ruby'
