--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -282,12 +282,17 @@
 				ada = Ada
 				as = Actionscript
 				asm = Assembler
+				ave = Avennue
+				baan = Baan
+				batch = Batch
 				c = C / C++
 				conf = Conf
 				context = Context
 				cs = C\#
 				css = CSS
+				diff = Diff
 				eiffel = Eiffel
+				err = Errorlist
 				forth = Forth
 				fortran = FORTRAN 90
 				html = HTML
@@ -297,10 +302,13 @@
 				latex = LaTeX
 				lisp = LISP
 				lua = Lua
+				make = Makefile
+				matlab = Matlab
 				nsis = NSIS
 				pascal = Pascal
 				perl = Perl
 				php = PHP
+				property = Property
 				ps = Postscript
 				python = Python
 				ruby = Ruby
@@ -431,12 +439,17 @@
 					ada = Ada
 					as = Actionscript
 					asm = Assembler
+					ave = Avennue
+					baan = Baan
+					batch = Batch
 					c = C / C++
 					conf = Conf
 					context = Context
 					cs = C\#
 					css = CSS
+					diff = Diff
 					eiffel = Eiffel
+					err = Errorlist
 					forth = Forth
 					fortran = FORTRAN 90
 					html = HTML
@@ -446,10 +459,13 @@
 					latex = LaTeX
 					lisp = LISP
 					lua = Lua
+					make = Makefile
+					matlab = Matlab
 					nsis = NSIS
 					pascal = Pascal
 					perl = Perl
 					php = PHP
+					property = Property
 					ps = Postscript
 					python = Python
 					ruby = Ruby
@@ -676,14 +692,19 @@
 				ada = aktiviere Spracheinstellungen fuer die Sprache Ada
 				as = aktiviere Spracheinstellungen fuer Macromedia Actionscript
 				asm = Spracheinstellungen fuer Assembler
+				ave = Spracheinstellungen der Avennue-Sprache
+				baan = Sprache der Baan-ERP-Systeme
+				batch = Microsofts alte und einfache Sprache zur Stapelverarbeitung
 				c = Spracheinstellungen fuer C / C++ Sprachen
 				conf = fuer Dateien im Apache Config Stil
 				context = Einstellungen fuer ConTeXt Tex Macros
-				cs = Syntaxmode fuer Microsoft C-Sharp 
-				css = Syntaxmode fuer Cascading Style Sheet Auszeichnungssprache
+				cs = Syntaxmodus fuer Microsoft C-Sharp 
+				css = Syntaxmodus fuer Cascading Style Sheet Auszeichnungssprache
+				diff = Syntaxmodus fuer patch-Dateien
 				eiffel = Bertrand Meyers objektorientierte Sprache Eiffel
+				err = Syntaxmodus fuer formatierte Fehlermeldungen
 				forth = Sprache der Forth Systeme
-				fortran = Syntaxmode von FORmula TRANslation
+				fortran = Syntaxmodus von FORmula TRANslation
 				html = Syntaxmode fuer HyperText Markup Language
 				idl = Syntaxmode der Interface Definition Language
 				java = Einstellungen fuer Sun's Java Sprache
@@ -691,10 +712,13 @@
 				latex = Syntaxmode fuer LaTeX Tex Erweiterungen
 				lisp = LISt Prozessor Einstellungen
 				lua = Einstellungen fuer die Erweiterungssprache Lua 
+				make = Regeldateien fuer das 'make' Werkzeug
+				matlab = Scripting-Sprache des MATLAB-Paketes
 				nsis = Sprache des Nullsoft Scriptable Install System
 				pascal = Niklaus Wirth's prozedurale Sprache Pascal
 				perl = Syntaxmode fuer Larry Walls Perl
 				php = Rasmus Lehrdorf PHP Hypertext Prozessors
+				property = einfache Formate fuer Konfigurationsdateien
 				ps = Adobe Dokumentbeschreibungssprache Postscript
 				python = Guido van Rossums dynamische Sprache Python 
 				ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
@@ -825,12 +849,17 @@
 					ada = oeffne Datei mit Spracheinstellungen fuer Ada
 					as = oeffne Datei mit Einstellungen fuer Macromedia Actionscript
 					asm = oeffne Datei mit Spracheinstellungen fuer Assembler
+					ave = Spracheinstellungen der Avennue-Sprache
+					baan = Sprache der Baan-ERP-Systeme
+					batch = Microsofts alte und einfache Sprache zur Stapelverarbeitung
 					c = oeffne Datei mit Spracheinstellungen fuer C / C++ Sprachen
 					conf = Einstellungen fuer Dateien im Apache Config Stil
 					context = Einstellungen fuer ConTeXt Tex Macros
 					cs = oeffne Datei mit Syntaxmode fuer Microsoft C-Sharp 
 					css = Einstellungen fuer Cascading Style Sheet oeffnen
+					diff = Syntaxmodus fuer patch-Dateien
 					eiffel = Bertrand Meyers objektorientierte Sprache Eiffel
+					err = Syntaxmodus fuer formatierte Fehlermeldungen
 					forth = Einstellungen der Sprache der Forth Systeme
 					fortran = Syntaxmode von FORmula TRANslation oeffnen
 					html = Syntaxmode fuer HyperText Markup Language oeffnen
@@ -840,10 +869,13 @@
 					latex = Syntaxmode fuer LaTeX Tex Erweiterungen oeffnen
 					lisp = LISt Prozessor Einstellungen oeffnen
 					lua = Einstellungen fuer die Erweiterungssprache Lua 
+					make = Regeldateien fuer das 'make' Werkzeug
+					matlab = Scripting-Sprache des MATLAB-Paketes
 					nsis = Sprache des Nullsoft Scriptable Install System
 					pascal = Datei mit Niklaus Wirth's prozedurale Sprache Pascal
 					perl = Datei mit Syntaxmode fuer Larry Walls Perl
 					php = Rasmus Lehrdorf PHP Hypertext Prozessors
+					property = einfache Formate fuer Konfigurationsdateien
 					ps = Adobe Dokumentbeschreibungssprache Postscript
 					python = Guido van Rossums dynamische Sprache Python
 					ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
