--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -282,12 +282,17 @@
 				ada = Ada
 				as = Actionscript
 				asm = Assembler
+				ave = Avennue
+				baan = Baan
+				batch = Batch
 				c = C / C++
 				conf = Conf
 				context = Context
 				cs = C\#
 				css = CSS
+				diff = Diff
 				eiffel = Eiffel
+				err = Errorlist
 				forth = Forth
 				fortran = FORTRAN 90
 				html = HTML
@@ -297,10 +302,13 @@
 				latex = LaTeX
 				lisp = LISP
 				lua = Lua
+				make = Makefile
+				matlab = Matlab
 				nsis = NSIS
 				pascal = Pascal
 				perl = Perl
 				php = PHP
+				property = Property
 				ps = Postscript
 				python = Python
 				ruby = Ruby
@@ -431,12 +439,17 @@
 					ada = Ada
 					as = Actionscript
 					asm = Assembler
+					ave = Avennue
+					baan = Baan
+					batch = Batch
 					c = C / C++
 					conf = Conf
 					context = Context
 					cs = C\#
 					css = CSS
+					diff = Diff
 					eiffel = Eiffel
+					err = Errorlist
 					forth = Forth
 					fortran = FORTRAN 90
 					html = HTML
@@ -446,10 +459,13 @@
 					latex = LaTeX
 					lisp = LISP
 					lua = Lua
+					make = Makefile
+					matlab = Matlab
 					nsis = NSIS
 					pascal = Pascal
 					perl = Perl
 					php = PHP
+					property = Property
 					ps = Postscript
 					python = Python
 					ruby = Ruby
@@ -676,12 +692,17 @@
 				ada = aktiviere Spracheinstellungen für Ada
 				as = aktiviere Spracheinstellungen für Macromedia Actionscript
 				asm = Spracheinstellungen für Assembler
+				ave = Spracheinstellungen der Avennue-Sprache
+				baan = Sprache der Baan-ERP-Systeme
+				batch = Microsofts alte und einfache Sprache zur Stapelverarbeitung
 				c = Spracheinstellungen für C / C++ Sprachen
 				conf = für Dateien im Apache Config Stil
 				context = Einstellungen für ConTeXt Tex Macros
 				cs = Syntaxmode für Microsoft C-Sharp 
 				css = Syntaxmode für Cascading Style Sheet Auszeichnungssprache
+				diff = Syntaxmodus für patch-Dateien
 				eiffel = Bertrand Meyers objektorientierte Sprache Eiffel
+				err = Syntaxmodus für formatierte Fehlermeldungen
 				forth = Sprache der Forth Systeme
 				fortran = Syntaxmode von FORmula TRANslation
 				html = Syntaxmode für HyperText Markup Language
@@ -691,10 +712,13 @@
 				latex = Syntaxmode für LaTeX Tex Erweiterungen
 				lisp = LISt Prozessor Einstellungen
 				lua = Einstellungen für die Erweiterungssprache Lua 
+				make = Regeldateien für das 'make' Werkzeug
+				matlab = Scripting-Sprache des MATLAB-Paketes
 				nsis = Sprache des Nullsoft Scriptable Install System
 				pascal = Niklaus Wirth's prozedurale Sprache Pascal
 				perl = Syntaxmode für Larry Walls Perl
 				php = Rasmus Lehrdorf PHP Hypertext Prozessors
+				property = einfache Formate für Konfigurationsdateien
 				ps = Adobe Dokumentbeschreibungssprache Postscript
 				python = Guido van Rossums dynamische Sprache Python 
 				ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
@@ -825,12 +849,17 @@
 					ada = öffne Datei mit Spracheinstellungen für Ada
 					as = öffne Datei mit Einstellungen für Macromedia Actionscript
 					asm = öffne Datei mit Spracheinstellungen für Assembler
+					ave = Spracheinstellungen der Avennue-Sprache
+					baan = Sprache der Baan-ERP-Systeme
+					batch = Microsofts alte und einfache Sprache zur Stapelverarbeitung
 					c = öffne Datei mit Spracheinstellungen für C / C++ Sprachen
 					conf = Einstellungen für Dateien im Apache Config Stil
 					context = Einstellungen für ConTeXt Tex Macros
 					cs = öffne Datei mit Syntaxmode für Microsoft C-Sharp 
 					css = Einstellungen für Cascading Style Sheet öffnen
+					diff = Syntaxmodus für patch-Dateien
 					eiffel = Bertrand Meyers objektorientierte Sprache Eiffel
+					err = Syntaxmodus für formatierte Fehlermeldungen
 					forth = Einstellungen der Sprache der Forth Systeme
 					fortran = Syntaxmode von FORmula TRANslation öffnen
 					html = Syntaxmode für HyperText Markup Language öffnen
@@ -840,11 +869,14 @@
 					latex = Syntaxmode für LaTeX Tex Erweiterungen öffnen
 					lisp = LISt Prozessor Einstellungen öffnen
 					lua = Einstellungen für die Erweiterungssprache Lua 
+					make = Regeldateien für das 'make' Werkzeug
+					matlab = Scripting-Sprache des MATLAB-Paketes
 					nsis = Sprache des Nullsoft Scriptable Install System
 					pascal = Datei mit Niklaus Wirth's prozedurale Sprache Pascal
 					perl = Datei mit Syntaxmode für Larry Walls Perl
 					php = Rasmus Lehrdorf PHP Hypertext Prozessors
 					ps = Adobe Dokumentbeschreibungssprache Postscript
+					property = einfache Formate für Konfigurationsdateien
 					python = Guido van Rossums dynamische Sprache Python
 					ruby = Yukihiro "Matz" Matsumoto's voll objektorientiertes Ruby
 					scheme = Syntaxmode des MIT LISP-Dialekt Scheme öffnen
