--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -282,12 +282,17 @@
 				ada = Ada
 				as = Actionscript
 				asm = Assembler
+				ave = Avennue
+				baan = Baan
+				batch = Batch
 				c = C / C++
 				conf = Conf
 				context = Context
 				cs = C\#
 				css = CSS
+				diff = Diff
 				eiffel = Eiffel
+				err = Errorlist
 				forth = Forth
 				fortran = FORTRAN 90
 				html = HTML
@@ -297,10 +302,13 @@
 				latex = LaTeX
 				lisp = LISP
 				lua = Lua
+				make = Makefile
+				matlab = Matlab
 				nsis = NSIS
 				pascal = Pascal
 				perl = Perl
 				php = PHP
+				property = Property
 				ps = Postscript
 				python = Python
 				ruby = Ruby
@@ -431,12 +439,17 @@
 					ada = Ada
 					as = Actionscript
 					asm = Assembler
+					ave = Avennue
+					baan = Baan
+					batch = Batch
 					c = C / C++
 					conf = Conf
 					context = Context
 					cs = C\#
 					css = CSS
+					diff = Diff
 					eiffel = Eiffel
+					err = Errorlist
 					forth = Forth
 					fortran = FORTRAN 90
 					html = HTML
@@ -446,10 +459,13 @@
 					latex = LaTeX
 					lisp = LISP
 					lua = Lua
+					make = Makefile
+					matlab = Matlab
 					nsis = NSIS
 					pascal = Pascal
 					perl = Perl
 					php = PHP
+					property = Property
 					ps = Postscript
 					python = Python
 					ruby = Ruby
@@ -676,12 +692,17 @@
 				ada = activate language settings for Ada
 				as = activate settings for Macromedia Actionscript
 				asm = language settings for Assembler
+				ave = highlighting and settings for the Avennue language
+				baan = language of the Baan ERP systems
+				batch = Microsofts classic commandline batch control language
 				c = settings for the C / C++ language family
 				conf = for Apache Conf styled configuration files
 				context = settings for the ConTeXt Tex Macros
 				cs = syntaxmode for Microsoft C-Sharp 
 				css = syntaxmode for Cascading Style Sheet language
+				diff = syntaxmode for patch files
 				eiffel = Bertrand Meyers objectoriented language Eiffel
+				err = syntaxmode for errorcode files
 				forth = language of the Forth systems
 				fortran = syntaxmode of the FORmula TRANslation language
 				html = syntaxmode for the HyperText Markup Language
@@ -691,10 +712,13 @@
 				latex = syntaxmode for the LaTeX Tex macros
 				lisp = LISt Prozessor settings
 				lua = syntaxmode for the embedding language Lua 
+				make = highlighting for make tool scripts
+				matlab = MATLAB scripting language
 				nsis = language of the Nullsoft Scriptable Install System
 				pascal = Niklaus Wirth's structured language Pascal
 				perl = syntaxmode for Larry Walls Perl
 				php = Rasmus Lehrdorf PHP Hypertext Prozessors
+				property = highlighting for simple config files
 				ps = Adobe's document desciption language Postscript
 				python = Guido van Rossums dynamic language Python 
 				ruby = Yukihiro "Matz" Matsumoto's full objectoriented language
@@ -825,12 +849,17 @@
 					ada = open file with settings for the Ada language 
 					as = open file with Macromedia Actionscript settings
 					asm = open file with language settings for Assembler
+					ave = highlighting and settings for the Avennue language
+					baan = language of the Baan ERP systems
+					batch = Microsofts classic commandline batch control language
 					c = open file with settings for the C / C++  languages
 					conf = settings for files in the Apache Conf style
 					context = settings for ConTeXt Tex Macros
 					cs = open file with syntaxmode for Microsoft C-Sharp 
 					css = settings for the Cascading Style Sheet language
-					eiffel = Bertrand Meyers object oriented languagee Eiffel
+					diff = syntaxmode for patch files
+					eiffel = Bertrand Meyers objectoriented language Eiffel
+					err = syntaxmode for errorcode files
 					forth = settings for the language of the Forth systems
 					fortran = syntaxmode von FORmula TRANslation open
 					html = syntaxmode for HyperText Markup Language open
@@ -840,10 +869,13 @@
 					latex = open syntaxmode for the Tex macros named LaTeX 
 					lisp = open settings for the almighty LISt Prozessor 
 					lua = settings for the extension language Lua 
+					make = highlighting for make tool scripts
+					matlab = MATLAB scripting language
 					nsis =  language of the Nullsoft Scriptable Install System
 					pascal = settings for Niklaus Wirth's procedural language Pascal
 					perl = file with syntaxmode for Larry Walls Perl
 					php = Rasmus Lehrdorf PHP Hypertext Prozessor
+					property = highlighting for simple config files
 					ps = Adobe document description language Postscript
 					python = Guido van Rossums dynamic language Python
 					ruby = Yukihiro "Matz" Matsumoto's full object oriented Ruby
