Import of LICHTKIND/Kephra-0.3.9.6 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9.6
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9.6.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     released

--- a/share/config/session/current.conf
+++ b/share/config/session/current.conf
@@ -1,4 +1,4 @@
-current_nr = 2
+current_nr = 6
 <document>
     cursor_pos = 520
     file_path = share\help\english\special_feature.txt
@@ -30,5 +30,49 @@ current_nr = 2
     readonly = protect
     tab_use = 1
     EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 561
+    file_path = D:\src\perl\editor\dev\base\share\config\interface\mainmenu.yml
+    codepage = 
+    edit_pos = -1
+    syntaxmode = yaml
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 475
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra.pm
+    codepage = 
+    edit_pos = 474
+    syntaxmode = perl
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 0
+    file_path = D:\src\perl\editor\dev\base\lib\Kephra\Config\File.pm
+    codepage = 
+    edit_pos = 1330
+    syntaxmode = perl
+    readonly = protect
+    tab_use = 1
+    EOL = cr+lf
+    tab_size = 4
+</document>
+<document>
+    cursor_pos = 0
+    file_path = D:\src\perl\editor\distro\strawberry\Kephra\pre\cpan\YAML.pm
+    codepage = 
+    edit_pos = 2481
+    syntaxmode = perl
+    readonly = protect
+    tab_use = 1
+    EOL = lf
     tab_size = 4
 </document>
