--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -1,11 +1,14 @@
+---
 full_menubar:
-  - menu file:
+  -
+    menu file:
       - item file-new
       -
       - menu file_insert_templates
       -
       - item file-open
-      - menu file_open:
+      -
+        menu file_open:
           - item file-reload
           - item file-reload-all
           -
@@ -27,10 +30,12 @@ full_menubar:
       - item file-close-all
       -
       - item app-exit
-  - menu edit:
+  -
+    menu edit:
       - item edit-changes-undo
       - item edit-changes-redo
-      - menu edit_changes:
+      -
+        menu edit_changes:
           - item edit-changes-undo-several
           - item edit-changes-redo-several
           -
@@ -46,14 +51,16 @@ full_menubar:
       - item edit-delete
       -
       - item select-document
-      - menu selection:
+      -
+        menu selection:
           - item edit-selection-move-char-left
           - item edit-selection-move-char-right
           - item edit-selection-move-line-up
           - item edit-selection-move-line-down
           - item edit-selection-move-page-up
           - item edit-selection-move-page-down
-      - menu current_line:
+      -
+        menu current_line:
           - item edit-line-cut
           - item edit-line-copy
           - item edit-line-duplicate
@@ -69,7 +76,8 @@ full_menubar:
           - item edit-line-move-page-down
       - menu navigation:#
       - 
-      - menu selection_format:
+      -
+        menu selection_format:
           - item edit-selection-format-indent-char
           - item edit-selection-format-dedent-char
           - item edit-selection-format-indent-tab
@@ -84,7 +92,8 @@ full_menubar:
           - item edit-selection-format-linewrap-on-width
           -
           - item edit-selection-format-del-trailing-whitespace
-      - menu selection_comment:
+      -
+        menu selection_comment:
           - item edit-selection-comment-add-perl
           - item edit-selection-comment-del-perl
           - item edit-selection-comment-toggle-perl
@@ -94,7 +103,8 @@ full_menubar:
           -
           - item edit-selection-comment-add-xml
           - item edit-selection-comment-del-xml
-      - menu selection_convert:
+      -
+        menu selection_convert:
           - item edit-selection-convert-uppercase
           - item edit-selection-convert-lowercase
           - item edit-selection-convert-titlecase
@@ -102,23 +112,27 @@ full_menubar:
           -
           - item edit-selection-convert-spaces2tabs
           - item edit-selection-convert-tabs2spaces
-  - menu search:
+  -
+    menu search:
       - item view-toolbar-search-goto
       - item view-dialog-find
       - item view-dialog-replace
-      - menu find_functions:
+      -
+        menu find_functions:
           - item find-prev
           - item find-next
           - item find-first
           - item find-last
           - item find-selection
-      - menu replace_functions:
+      -
+        menu replace_functions:
           - item replace-prev
           - item replace-next
           - item replace-all
           - item replace-with-confirm
           - item replace-selection
-      - menu search_attributes:
+      -
+        menu search_attributes:
           - checkitem search-attribute-incremental-switch
           - checkitem search-attribute-autowrap-switch
           -
@@ -134,7 +148,8 @@ full_menubar:
       - item goto-line
       - item goto-last-edit
       -
-      - menu bookmark_goto:
+      -
+        menu bookmark_goto:
           - item bookmark-goto-1
           - item bookmark-goto-2
           - item bookmark-goto-3
@@ -145,7 +160,8 @@ full_menubar:
           - item bookmark-goto-8
           - item bookmark-goto-9
           - item bookmark-goto-0
-      - menu bookmark_toggle:
+      -
+        menu bookmark_toggle:
           - item bookmark-toggle-1
           - item bookmark-toggle-2
           - item bookmark-toggle-3
@@ -157,8 +173,10 @@ full_menubar:
           - item bookmark-toggle-9
           - item bookmark-toggle-0
       - item bookmark-delete-all
-  - menu document:
-      - menu document_change:
+  -
+    menu document:
+      -
+        menu document_change:
           - item document-change-prev
           - item document-change-next 
           - item document-change-back
@@ -166,11 +184,13 @@ full_menubar:
           - item document-move-left
           - item document-move-right
       -
-      - menu document_syntaxmode:
+      -
+        menu document_syntaxmode:
           - item document-syntaxmode-auto
           - checkitem document-syntaxmode-none
           -
-          - menu document_syntaxmode_A-M:
+          -
+            menu document_syntaxmode_A-M:
               - checkitem document-syntaxmode-ada
               - checkitem document-syntaxmode-as
               - checkitem document-syntaxmode-asm
@@ -196,7 +216,8 @@ full_menubar:
               - checkitem document-syntaxmode-lua
               - checkitem document-syntaxmode-make
               - checkitem document-syntaxmode-matlab
-          - menu document_syntaxmode_N-Z:
+          -
+            menu document_syntaxmode_N-Z:
               - checkitem document-syntaxmode-nsis
               - checkitem document-syntaxmode-pascal
               - checkitem document-syntaxmode-perl
@@ -215,7 +236,8 @@ full_menubar:
               - checkitem document-syntaxmode-xml
               - checkitem document-syntaxmode-yaml
           -
-          - menu document_syntaxmode_compiled:
+          -
+            menu document_syntaxmode_compiled:
               - checkitem document-syntaxmode-asm
               - checkitem document-syntaxmode-c
               - checkitem document-syntaxmode-cs
@@ -224,7 +246,8 @@ full_menubar:
               - checkitem document-syntaxmode-fortran
               - checkitem document-syntaxmode-java
               - checkitem document-syntaxmode-pascal
-          - menu document_syntaxmode_interpreted:
+          -
+            menu document_syntaxmode_interpreted:
               - checkitem document-syntaxmode-batch
               - checkitem document-syntaxmode-js
               - checkitem document-syntaxmode-lisp
@@ -240,20 +263,23 @@ full_menubar:
               - checkitem document-syntaxmode-tcl
               - checkitem document-syntaxmode-vb
               - checkitem document-syntaxmode-vbs
-          - menu document_syntaxmode_document:
+          -
+            menu document_syntaxmode_document:
               - checkitem document-syntaxmode-context
               - checkitem document-syntaxmode-css
               - checkitem document-syntaxmode-html
               - checkitem document-syntaxmode-latex
               - checkitem document-syntaxmode-ps
               - checkitem document-syntaxmode-tex
-          - menu document_syntaxmode_data_structure:
+          -
+            menu document_syntaxmode_data_structure:
               - checkitem document-syntaxmode-conf
               - checkitem document-syntaxmode-property
               - checkitem document-syntaxmode-sql
               - checkitem document-syntaxmode-xml
               - checkitem document-syntaxmode-yaml
-          - menu document_syntaxmode_web:
+          -
+            menu document_syntaxmode_web:
               - checkitem document-syntaxmode-as
               - checkitem document-syntaxmode-css
               - checkitem document-syntaxmode-html
@@ -261,7 +287,8 @@ full_menubar:
               - checkitem document-syntaxmode-perl
               - checkitem document-syntaxmode-php
               - checkitem document-syntaxmode-vbs
-          - menu document_syntaxmode_special:
+          -
+            menu document_syntaxmode_special:
               - checkitem document-syntaxmode-baan
               - checkitem document-syntaxmode-diff
               - checkitem document-syntaxmode-err
@@ -272,7 +299,8 @@ full_menubar:
       - checkitem document-brace-indention
       - checkitem document-auto-indention
       - checkitem document-tabs-use
-      - menu document_tab_width:
+      -
+        menu document_tab_width:
           - radioitem document-tabs-width-1
           - radioitem document-tabs-width-2
           - radioitem document-tabs-width-3
@@ -280,15 +308,18 @@ full_menubar:
           - radioitem document-tabs-width-5
           - radioitem document-tabs-width-6
           - radioitem document-tabs-width-8
-      - menu document_lineendchar:
+      -
+        menu document_lineendchar:
           - radioitem document-EOL-lf
           - radioitem document-EOL-cr
           - radioitem document-EOL-cr+lf
-      - menu document_readonly:
+      -
+        menu document_readonly:
           - radioitem document-readonly-as-attr
           - radioitem document-readonly-on
           - radioitem document-readonly-off
-  - menu file_session:
+  -
+    menu file_session:
       - item file-session-open
       - item file-session-add
       - item file-session-save
@@ -298,17 +329,21 @@ full_menubar:
       -
       - item file-session-import
       - item file-session-export
-  - menu view:
+  -
+    menu view:
       - checkitem view-window-stay-on-top
       -
-      - menu view_bars:
+      -
+        menu view_bars:
           - checkitem view-toolbar-main
           - checkitem view-tabbar
           - checkitem view-toolbar-search
           - checkitem view-statusbar
-      - menu view_contextmenu:
+      -
+        menu view_contextmenu:
           - checkitem view-tabbar-contexmenu
-          - menu view_editpanel_contexmenu:
+          -
+            menu view_editpanel_contexmenu:
               - radioitem view-editpanel-contextmenu-custom
               - radioitem view-editpanel-contextmenu-default
               - radioitem view-editpanel-contextmenu-no
@@ -317,7 +352,8 @@ full_menubar:
       - checkitem view-editpanel-margin-marker
       - checkitem view-editpanel-margin-line-number
       - checkitem view-editpanel-margin-text-fold#
-      - menu view_textmargin:
+      - 
+        menu view_textmargin:
           - radioitem view-editpanel-margin-text-0
           - radioitem view-editpanel-margin-text-1
           - radioitem view-editpanel-margin-text-2
@@ -334,10 +370,12 @@ full_menubar:
       - checkitem view-editpanel-EOL
       - checkitem view-editpanel-whitespace
       - item view-editpanel-font
-  - menu config:
+  -
+    menu config:
       - item view-dialog-config
       -
-      - menu config_global:
+      -
+        menu config_global:
           - item config-file-global-open
           - item config-file-global-reload
           - item config-file-global-save
@@ -348,7 +386,8 @@ full_menubar:
           - 
           - item config-file-global-load-backup
           - item config-file-global-load-defaults
-      - menu config_interface:
+      -
+        menu config_interface:
           - item config-file-interface-commandlist
           - item config-file-interface-menubar
           - item config-file-interface-contextmenu
@@ -356,14 +395,16 @@ full_menubar:
           - item config-file-interface-maintoolbar#
           - item config-file-interface-searchbar#
           - item config-file-interface-statusbar#
-      - menu config_localisation:
+      -
+        menu config_localisation:
           - item config-file-localisation-english
           - item config-file-localisation-deutsch-iso
           - item config-file-localisation-deutsch
           - item config-file-localisation-deutsch-utf#
           - item config-file-localisation-cesky-iso
           - item config-file-localisation-cesky-utf#
-      - menu config_syntaxmode_A-M:
+      -
+        menu config_syntaxmode_A-M:
           - item config-file-syntaxmode-ada
           - item config-file-syntaxmode-as
           - item config-file-syntaxmode-asm
@@ -389,7 +430,8 @@ full_menubar:
           - item config-file-syntaxmode-lua
           - item config-file-syntaxmode-make
           - item config-file-syntaxmode-matlab
-      - menu config_syntaxmode_N-Z:
+      -
+        menu config_syntaxmode_N-Z:
           - item config-file-syntaxmode-nsis
           - item config-file-syntaxmode-pascal
           - item config-file-syntaxmode-perl
@@ -408,7 +450,8 @@ full_menubar:
           - item config-file-syntaxmode-xml
           - item config-file-syntaxmode-yaml
       - item config-file-templates
-  - menu help:
+  -
+    menu help:
       - item view-documentation-welcome
       - item view-documentation-this-version
       - item view-documentation-navigation-guide
