Import of LICHTKIND/Kephra-0.3.9_14 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9_14
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9_14.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -319,6 +319,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = ;
+				output = Kephra::Extention::Output::switch_visibility()
+			</panel>
 			statusbar = Kephra::App::StatusBar::switch_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::switch_contextmenu_visibility()
 			<statusbar-info>
@@ -629,6 +633,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = 0
+				output = Kephra::Extention::Output::get_visibility()
+			</panel>
 			statusbar = Kephra::App::StatusBar::get_visibility()
 			statusbar-contexmenu = Kephra::App::StatusBar::get_contextmenu_visibility()
 			<statusbar-info>
@@ -684,7 +692,7 @@
 		</find>
 		<goto>
 			last-edit = goto_last_edit.xpm
-			line = goto_last_edit.xpm
+			line = goto_line.xpm
 		</goto>
 		<view>
 			<dialog>
@@ -692,7 +700,7 @@
 				find = find_start.xpm
 				info = help_info.xpm
 				keymap = help_keyboard.xpm
-				replace = find_start.xpm
+				replace = replace_start.xpm
 			</dialog>
 			editpanel-line-wrap = line_wrap.xpm
 			toolbar-search = edit_delete.xpm
@@ -857,6 +865,7 @@
 				info = alt+shift+i
 				keymap = alt+shift+k
 			</dialog>
+			panel-output = ctrl+f5
 			window-stay-on-top = ctrl+t
 		</view>
 	</key>
