--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -43,6 +43,7 @@
 		document_lineendchar = Zeilenendzeichen
 		document_readonly = Schreibschutz
 		view = Ansicht
+		view_panel = Panel
 		view_bars = Leisten
 		view_contextmenu = Kontextmenüs
 		view_editpanel_contexmenu = Editor
@@ -382,6 +383,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = Notizablage
+				output = Ausgabe
+			</panel>
 			statusbar = Statuszeile
 			statusbar-contexmenu = Statuszeile
 			<statusbar-info>
