--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -43,6 +43,7 @@
 		document_lineendchar = Lineendchars
 		document_readonly = Write Protection
 		view = View
+		view_panel = Panel
 		view_bars = App Bars
 		view_contextmenu = Context Menus
 		view_editpanel_contexmenu = Edit Panel
@@ -382,6 +383,10 @@
 					</text>
 				</margin>
 			</editpanel>
+			<panel>
+				notepad = Notepad
+				output = Output
+			</panel>
 			statusbar = Statusbar
 			statusbar-contexmenu = Statusbar
 			<statusbar-info>
