Import of LICHTKIND/Kephra-0.3.9_15 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9_15
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9_15.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -12,9 +12,11 @@ no_index:
     - inc
     - share
     - t
+    - xt
 requires: 
   perl: 5.006
   Wx:   0.70
+  Wx-Perl-ProcessStream: 0;
   YAML-Tiny: 0.31
   Config-General: 0.30
   File-UserConfig: 0
