--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -189,6 +189,7 @@
 			</toggle>
 			delete-all = Kephra::Edit::Bookmark::delete_all()
 		</bookmark>
+		tool-run-document = Kephra::Extention::Output::run()
 		<document>
 			auto-indention = Kephra::Document::switch_autoindention()
 			brace-indention = Kephra::Document::switch_braceindention()
@@ -843,6 +844,7 @@
 				0 = ctrl+shift+0
 			</toggle>
 		</bookmark>
+		tool-run-document = f5
 		<document>
 			<change>
 				back = ctrl+shift+back
