--- a/share/config/localisation/deutsch.conf
+++ b/share/config/localisation/deutsch.conf
@@ -28,6 +28,7 @@
 		replace_functions = Ersetzfunktionen
 		bookmark_goto = Gehe Zu Lesezeichen
 		bookmark_toggle = Lesezeichen Umschalten
+		tools = Werkzeuge
 		document = Do&kument
 		document_change = Waehle
 		document_syntaxmode = Syntaxmode
@@ -253,6 +254,7 @@
 			</toggle>
 			delete-all = Loesche Lesezeichen
 		</bookmark>
+		tool-run-document = Starte
 		<document>
 			auto-indention = Autoeinrueckung
 			brace-indention = Klammereinrueckung
@@ -667,6 +669,7 @@
 			</toggle>
 			delete-all = loesche alle Lesezeichen
 		</bookmark>
+		tool-run-document = starte aktuelles Programm und zeig Ergebnis im output panel
 		<document>
 			auto-indention = rueckt bei Enter neue Zeilen wie vorige ein
 			brace-indention = beachtet Einrueckungen nach geschweiften Klammern
