--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -28,6 +28,7 @@
 		replace_functions = Ersetzfunktionen
 		bookmark_goto = Gehe Zu Lesezeichen
 		bookmark_toggle = Lesezeichen Umschalten
+		tools = Werkzeuge
 		document = Do&kument
 		document_change = Wähle
 		document_syntaxmode = Syntaxmode
@@ -253,6 +254,7 @@
 			</toggle>
 			delete-all = Lösche Lesezeichen
 		</bookmark>
+		tool-run-document = Starte
 		<document>
 			auto-indention = Autoeinrückung
 			brace-indention = Klammereinrückung
@@ -667,6 +669,7 @@
 			</toggle>
 			delete-all = lösche alle Lesezeichen
 		</bookmark>
+		tool-run-document = starte aktuelles Programm und zeig Ergebnis im output panel
 		<document>
 			auto-indention = rückt bei Enter neue Zeilen wie vorige ein
 			brace-indention = beachtet Einrückungen nach geschweiften Klammern
