--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -28,6 +28,7 @@
 		replace_functions = Replace Functions
 		bookmark_goto = Goto Bookmark
 		bookmark_toggle = Toggle Bookmark
+		tools = Tools
 		document = Document
 		document_change = Change
 		document_syntaxmode = Syntaxmode
@@ -253,6 +254,7 @@
 			</toggle>
 			delete-all = Delete Bookmarks
 		</bookmark>
+		tool-run-document = Run
 		<document>
 			auto-indention = Autoindention
 			brace-indention = Braceindention
@@ -667,6 +669,7 @@
 			</toggle>
 			delete-all = delete all bookmarks
 		</bookmark>
+		tool-run-document = run current programm and show result in output panel
 		<document>
 			auto-indention = indents new line like previous when Enter pressed 
 			brace-indention = obey right indention after curly braces when press enter
