--- a/share/config/interface/mainmenu.yml
+++ b/share/config/interface/mainmenu.yml
@@ -174,6 +174,9 @@ full_menubar:
           - item bookmark-toggle-0
       - item bookmark-delete-all
   -
+    menu tools:
+      - item tool-run-document
+  -
     menu document:
       -
         menu document_change:
