Import of LICHTKIND/Kephra-0.3.9_16 from CPAN.
gitpan-cpan-distribution: Kephra
gitpan-cpan-version:      0.3.9_16
gitpan-cpan-path:         LICHTKIND/Kephra-0.3.9_16.tar.gz
gitpan-cpan-author:       LICHTKIND
gitpan-cpan-maturity:     developer

--- a/share/config/interface/commands.conf
+++ b/share/config/interface/commands.conf
@@ -189,6 +189,7 @@
 			</toggle>
 			delete-all = Kephra::Edit::Bookmark::delete_all()
 		</bookmark>
+		tool-note = Kephra::Extention::Notepad::note()
 		tool-run-document = Kephra::Extention::Output::run()
 		<document>
 			auto-indention = Kephra::Document::switch_autoindention()
@@ -321,7 +322,7 @@
 				</margin>
 			</editpanel>
 			<panel>
-				notepad = ;
+				notepad = Kephra::Extention::Notepad::switch_visibility()
 				output = Kephra::Extention::Output::switch_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::switch_visibility()
@@ -635,7 +636,7 @@
 				</margin>
 			</editpanel>
 			<panel>
-				notepad = 0
+				notepad = Kephra::Extention::Notepad::get_visibility()
 				output = Kephra::Extention::Output::get_visibility()
 			</panel>
 			statusbar = Kephra::App::StatusBar::get_visibility()
@@ -844,6 +845,7 @@
 				0 = ctrl+shift+0
 			</toggle>
 		</bookmark>
+		tool-note = f4
 		tool-run-document = f5
 		<document>
 			<change>
@@ -867,6 +869,7 @@
 				info = alt+shift+i
 				keymap = alt+shift+k
 			</dialog>
+			panel-notepad = ctrl+f4
 			panel-output = ctrl+f5
 			window-stay-on-top = ctrl+t
 		</view>
