--- a/share/config/localisation/deutsch_iso.conf
+++ b/share/config/localisation/deutsch_iso.conf
@@ -254,6 +254,7 @@
 			</toggle>
 			delete-all = Lösche Lesezeichen
 		</bookmark>
+		tool-note = Notiere
 		tool-run-document = Starte
 		<document>
 			auto-indention = Autoeinrückung
