--- a/share/config/localisation/english.conf
+++ b/share/config/localisation/english.conf
@@ -254,6 +254,7 @@
 			</toggle>
 			delete-all = Delete Bookmarks
 		</bookmark>
+		tool-note = Note
 		tool-run-document = Run
 		<document>
 			auto-indention = Autoindention
